[project]
name = "py-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "websockets>=12.0",
    # OpenTelemetry packages
    "opentelemetry-distro>=0.59b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.38.0",
    "opentelemetry-instrumentation-redis>=0.59b0",
    "pytm-shared",
]

[tool.uv.sources]
pytm-shared = { path = "../shared", editable = true }
